[gd_scene load_steps=4 format=3 uid="uid://bb0n85dola7tx"]

[ext_resource type="Script" path="res://Bosque/Puzzle/Puzzle_bos.gd" id="1_v2t0k"]
[ext_resource type="Texture2D" uid="uid://ds76l1256ofni" path="res://Bosque/Puzzle/PUZZLE_2.png" id="1_wyqn8"]
[ext_resource type="FontFile" uid="uid://b5glysunhn2en" path="res://Menu/Retro Gaming.ttf" id="2_drt7r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2t0k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0941176, 0.0666667, 0.00784314, 0.701961)

[node name="UI" type="CanvasLayer" parent="ColorRect"]

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/UI"]
offset_left = 474.5
offset_top = 134.5
offset_right = 1445.5
offset_bottom = 945.5
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/UI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "






















"

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/UI/VBoxContainer/HBoxContainer/Label"]
position = Vector2(488.5, 241.5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_wyqn8")

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/UI/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ColorRect/UI/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_drt7r")
theme_override_font_sizes/font_size = 30
text = "LOCURA"

[node name="Button2" type="Button" parent="ColorRect/UI/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_drt7r")
theme_override_font_sizes/font_size = 30
text = "FELICIDAD"

[node name="Button3" type="Button" parent="ColorRect/UI/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_drt7r")
theme_override_font_sizes/font_size = 30
text = "PERFECCIÃ“N"

[node name="Button4" type="Button" parent="ColorRect/UI/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_drt7r")
theme_override_font_sizes/font_size = 30
text = "PENUMBRA"

[connection signal="pressed" from="ColorRect/UI/VBoxContainer/VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/UI/VBoxContainer/VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/UI/VBoxContainer/VBoxContainer2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ColorRect/UI/VBoxContainer/VBoxContainer2/Button4" to="." method="_on_button_4_pressed"]
